tests/checker/fail/codegen_gap_list_compound.can
Age = Int

Name = String

User = Age * Name

Unit => Program {
    List(User(Age(1) * Name("ann")) * User(Age(2) * Name("bob"))) -> Length -> Print
}
